# homologations-suggester

./: .gitignore  README.md  main.py  pyproject.toml  template.xlsx  transition_plan.db  transition_plan_ddl.sql
.github/workflows/: build_release.yml
assets/: architecture.excalidraw
nix/: flake.nix  python-packages.nix
src/: basic_student_info_service.py  cli.py  cli_adapter.py  constants.py  homologable_subjects_service.py  homologables_report_service.py  main.py  shared_types.py  student_info_gateway.py  student_report_gateway.py  student_report_service.py  subject_repository.py  suggest_subject_service.py  utils.py
src/adapter/cli/: __init__.py  files_processor.py  progress_bar.py  reports_status.py  typer_cli_handler.py
src/adapter/homologation_report_gateway/xlsx/: __init__.py  xlsx_homologation_report_gateway.py
src/adapter/homologation_xlsx_fill/: __init__.py  homologation_xlsx_fill.py
src/entities/: __init__.py  approved_subject.py  homologation_report_data.py  new_subject.py  old_subject.py  pending_subjects_report_data.py  student.py  student_analysis.py
src/gateways/: __init__.py  homologation_report_gateway.py  pending_subjects_report_gateway.py  student_info_gateway.py  student_report_gateway.py
src/services/: __init__.py  homologable_subjects_service.py  pending_subjects_service.py  student_report_service.py
tests/adapter/subject_repository/: test_sqlite_subject_repository.py
tests/pdf_gateway/: test_pdf_gateway.py
tests/services/: test_pending_subjects_service.py
tests/subject_repository/: test_sqlite_subject_repository.py
(+8 files in other folders)
