[project]
name = "cli-subjects-suggester"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.1",
    "openpyxl>=3.1.5",
    "pyinstaller>=6.21.0",
    "pypdf>=6.13.2",
    "rich>=15.0.0",
    "typer>=0.26.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

